--- a/Styles/style.css
+++ b/Styles/style.css
@@ -192,7 +192,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 210px auto;
+  margin: 210px auto 100px;
   max-width: 1140px;
   height: 597px;
 }
@@ -230,5 +230,28 @@
   font-weight: 400;
 }
 
+.deals {
+  margin: 30px auto;
+  max-width: 1440px;
+  height: 138px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.deal-title {
+  width: 1440px;
+  height: 68px;
+  font-size: 3.55em;
+}
+
+.deal-description {
+  margin-top: 20px;
+  font-weight: 400;
+  width: 888px;
+  height: 54px;
+  font-size: 1.3em;
+}
 . @media screen and(max-width:576px) {
 }
