--- a/Styles/style.css
+++ b/Styles/style.css
@@ -253,5 +253,95 @@
   height: 54px;
   font-size: 1.3em;
 }
+
+/* plant picture section */
+.plant-images {
+  max-width: 1140px;
+  height: 423px;
+  margin: 120px auto;
+  display: flex;
+  justify-content: space-between;
+}
+.plant-images img {
+  border-radius: 14px;
+}
+.leftside-images {
+  width: 367px;
+  height: 423px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.bloom-plant {
+  position: relative;
+}
+
+.button-01 {
+  position: absolute;
+}
+.rightside-image {
+  width: 753px;
+  height: 423px;
+}
+
+/* Down-banner */
+.down-banner {
+  max-width: 1440px;
+  height: 533px;
+  margin: 120px auto;
+}
+.down-banner-img-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.down-banner-img {
+  width: 1440px;
+  height: 533px;
+}
+
+.down-banner-details {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  position: absolute;
+  width: 830px;
+  height: 141px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.down-banner-title {
+  font-size: 3.55em;
+  color: #ffffff;
+}
+.down-banner-search {
+  width: 830px;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 16px;
+}
+
+.email {
+  padding: 15px;
+  width: 644px;
+  height: 50px;
+  font-size: 0.99em;
+}
+.down-banner-button {
+  width: 186px;
+  height: 50px;
+  background-color: #e95a08;
+  color: #ffffff;
+  font-size: 1em;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+
 . @media screen and(max-width:576px) {
 }
